# IstDasEineKatze

./: README.md
ai/haskell/: LICENSE  istDasEineKatze.cabal
ai/haskell/app/: Main.hs
ai/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ai/haskell/src/NeuralNetwork/: Activation.hs  Layer.hs  Matrix.hs  Neuron.hs
